--- a/PositionIn/Wallet/PositionIn.WalletViewController.xib
+++ b/PositionIn/Wallet/PositionIn.WalletViewController.xib
@@ -6,27 +6,45 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WalletViewController" customModule="PositionIn" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="Q91-4n-Ell" id="txu-av-GFT"/>
+                <outlet property="tableView" destination="re5-8r-KZn" id="jnu-q9-wAn"/>
+                <outlet property="view" destination="bFi-DP-Mcf" id="Rhs-1C-WoN"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="Q91-4n-Ell">
+        <view contentMode="scaleToFill" id="bFi-DP-Mcf">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TVg-pn-Uug">
-                    <rect key="frame" x="281" y="290" width="40" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="re5-8r-KZn" customClass="TableView" customModule="PosInCore">
+                    <rect key="frame" x="0.0" y="68" width="600" height="532"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="separatorColor" red="0.74901960779999999" green="0.74901960779999999" blue="0.74901960779999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                </tableView>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="6kJ-lT-anm">
+                    <rect key="frame" x="10" y="20" width="580" height="29"/>
+                    <segments>
+                        <segment title="Inventory"/>
+                        <segment title="Sold"/>
+                        <segment title="Purchased"/>
+                    </segments>
+                    <color key="tintColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
+                    <connections>
+                        <action selector="displayModeSegmentedControlChanged:" destination="-1" eventType="valueChanged" id="WXy-h8-aXL"/>
+                    </connections>
+                </segmentedControl>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="centerX" secondItem="TVg-pn-Uug" secondAttribute="centerX" id="pzY-ca-u3F"/>
-                <constraint firstAttribute="centerY" secondItem="TVg-pn-Uug" secondAttribute="centerY" id="xnK-RW-Msa"/>
+                <constraint firstAttribute="trailing" secondItem="re5-8r-KZn" secondAttribute="trailing" id="2HI-8E-J0X"/>
+                <constraint firstItem="6kJ-lT-anm" firstAttribute="leading" secondItem="bFi-DP-Mcf" secondAttribute="leading" constant="10" id="N6C-dy-xcZ"/>
+                <constraint firstAttribute="bottom" secondItem="re5-8r-KZn" secondAttribute="bottom" id="Yya-qO-rGB"/>
+                <constraint firstAttribute="trailing" secondItem="6kJ-lT-anm" secondAttribute="trailing" constant="10" id="fHw-AE-JH8"/>
+                <constraint firstItem="re5-8r-KZn" firstAttribute="top" secondItem="6kJ-lT-anm" secondAttribute="bottom" constant="20" id="l3i-Ez-nNR"/>
+                <constraint firstItem="6kJ-lT-anm" firstAttribute="top" secondItem="bFi-DP-Mcf" secondAttribute="top" constant="20" id="ldZ-rw-hFc"/>
+                <constraint firstItem="re5-8r-KZn" firstAttribute="leading" secondItem="bFi-DP-Mcf" secondAttribute="leading" id="xRk-pc-uH6"/>
             </constraints>
-            <point key="canvasLocation" x="249" y="250"/>
+            <point key="canvasLocation" x="193" y="218"/>
         </view>
     </objects>
 </document>
